--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+dnspython==2.1.0
+pip==21.2.4
+pwinput==1.0.2
+setuptools==58.2.0
+email-validator==1.1.3
 gunicorn==20.1.0
 certifi==2020.6.20
 chardet==3.0.4
